# multi-zone

./: README.md
case/: input.mz
src/: CMakeLists.txt  boundaryface_interface.f90  codetypes.h  gridgen.c  io.c  main.c  main_ex.c  main_surf.c  ugrid_sub.c  unique_nodes.c  utils.c  write_cgns.c
